--- a/assets/css/cv_02.css
+++ b/assets/css/cv_02.css
@@ -8,9 +8,6 @@ footer {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-  gap: 10px 20px;
       grid-template-areas: ". " ". ";
   width: 100%;
   height: 100%;
@@ -20,7 +17,7 @@ footer a {
   text-align: center;
   text-decoration: underline;
   font-weight: bold;
-  color: #1372AD;
+  color: white;
   margin: auto auto;
   font-size: 10vw;
 }
