--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -24,8 +24,8 @@ main {
                 width: 150px;
                 height: 150px;
                 clip-path: path('M0,64c0,35.346,31.992,54.489,62.04,81.702C115.331,106.299,128,99.346,128,64c0-35.346-28.654-64-64-64 C28.653, 0, 0, 28.654, 0, 64');
-                background-image: url(../image/profil.jpeg);
-                background-size: 155px 155px;
+                background-image: url(../image/A24A7D10.jpg);
+                background-size: 128px 147px;
                 transform: scale(1.5);
             }
             .coordonnee {
