Mise en place d'une police pour dyslexique

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,12 @@ $C3: #00000C;
 $C3a: #00000c60;
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+@import url('https://fr.allfont.net/allfont.css?fonts=lexia');
+
+.dys{
+    font-family: 'Lexia', arial;
+    font-size:14px;
+}
 body {
     background-color: $C2;
 }
