--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+@import url("https://fr.allfont.net/allfont.css?fonts=lexia");
+.dys {
+  font-family: 'Lexia', arial;
+  font-size: 14px;
+}
+
 body {
   background-color: #4c85bd;
 }
