--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -502,6 +502,14 @@ main ul::before {
   }
 }
 
+.parcours a {
+  padding: 0.2rem 0.4rem;
+  font-size: 87.5%;
+  color: #fff;
+  background-color: #212529;
+  border-radius: 0.2rem;
+}
+
 .copyright {
   text-align: center;
   color: white;
