--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -4,18 +4,66 @@ $C3: #00000C;
 $C4:white;
 $C5:rgb(100, 100, 100);
 @import url("https://fonts.googleapis.com/css?family=Oswald");
+body {
+    background-color: white;
+    color: black;
+}
+
 main {
-    @media screen and (orientation: portrait) {
-        display: block;
+    display: block;
+    .banniere {
+        padding-top: 50px;
     }
-    @media screen and (orientation:landscape) {
-        display: grid;
-        grid-template-columns: 0.5fr 1.5fr;
-        grid-template-rows: 1fr;
-        gap: 0px 0px;
-        grid-template-areas: ". .";
+    @media screen and (min-width: 1500px) {
+        .banniere {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-column-gap: 20px;
+            grid-row-gap: 20px;
+            justify-items: center;
+            align-items: center;
+            h2 {
+                font-size: 6vw;
+            }
+        }
+    }
+    @media screen and (min-width: 459px) and (max-width: 1499px) {
+        .banniere {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-column-gap: 20px;
+            grid-row-gap: 20px;
+            justify-items: center;
+            align-items: center;
+            h2 {
+                font-size: 9vw;
+            }
+        }
+    }
+    @media screen and (max-width: 460px) {
+        .banniere {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            grid-column-gap: 20px;
+            grid-row-gap: 20px;
+            justify-items: center;
+            align-items: center;
+            h2 {
+                font-size: 22vw;
+            }
+        }
     }
     section {
+        aside {
+            padding: auto auto;
+            align-self: center;
+            justify-self: center;
+            height: 250px;
+            width: 100%;
+            font-size: 1.2em;
+        }
         &:first-child {
             background-color: $C2;
             margin: 0;
@@ -30,9 +78,6 @@ main {
             }
             .coordonnee {
                 background-color: transparent;
-                @media screen and (orientation: portrait) {
-                    height: 150px
-                }
                 a {
                     color: $C4;
                     text-decoration: underline;
@@ -41,33 +86,8 @@ main {
                     }
                 }
             }
-            .reseaux {
-                background-color: transparent;
-                svg {
-                    a {
-                        &:hover {
-                            fill-opacity: 0.5;
-                        }
-                    }
-                }
-            }
             .langues {
-                @media screen and (orientation: landscape) {
-                    width: 100%;
-                }
-                @media screen and (orientation: portrait) {
-                    .card-body {
-                        padding: 0;
-                        display: grid;
-                        grid-template-columns: 1fr 1fr;
-                        grid-template-rows: 1fr;
-                        gap: 0px 0px;
-                        grid-template-areas: ". .";
-                        p {
-                            font-size: 10px;
-                        }
-                    }
-                }
+                width: 100%;
                 background-color: transparent;
             }
         }
@@ -83,207 +103,248 @@ main {
                 text-transform: uppercase;
                 border-radius: 0px 0px 40px 0px;
             }
-            .metiers {
-                @media screen and (orientation: portrait) {
-                    margin-bottom: 20px;
-                    .card {
-                        margin-bottom: 15px;
-                    }
-                    p {
-                        font-size: 15px;
-                        margin: auto auto;
-                        i {
-                            margin-right: 5px;
-                        }
-                    }
-                }
-                @media screen and (orientation:landscape) {
-                    margin: auto;
-                    margin-top: 50px;
-                    margin-bottom: 20px;
-                    width: 95%;
-                    .card {
-                        margin: 0 0.1vw;
-                    }
-                    p {
-                        font-size: 20px;
-                        margin: auto auto;
-                        i {
-                            margin-right: 5px;
-                        }
-                    }
-                }
-                .vm {
-                    background-color: red;
-                    color: white !important;
-                    .icon {
-                        position: absolute;
-                        left: 50%;
-                        bottom: -15px;
-                        color: red;
-                        -webkit-text-stroke-width: 1px;
-                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
-                    }
-                }
-                .photo {
-                    background-color: black;
-                    color: white !important;
-                    .icon {
-                        position: absolute;
-                        left: 50%;
-                        bottom: -15px;
-                        color: black;
-                        -webkit-text-stroke-width: 1px;
-                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
-                    }
-                }
-                .cm {
-                    background-color: $C2;
-                    color: white !important;
-                    .icon {
-                        position: absolute;
-                        left: 50%;
-                        bottom: -15px;
-                        color: $C2;
-                        -webkit-text-stroke-width: 1px;
-                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
-                    }
-                }
-                .js {
-                    background-color: yellow;
+        }
+    }
+}
+
+// Les différentes compétences START
+.competences {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    background-color: white;
+    article {
+        display: inline-block;
+        width: 100%;
+        flex: 1 1 auto;
+        padding: 1.25rem;
+        h4 {
+            text-align: center;
+        }
+        img {
+            width: 20px;
+            margin-right: 5px;
+        }
+    }
+}
+
+.compe {
+    @media screen and (min-width: 1500px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        justify-items: center;
+        align-items: center;
+    }
+    @media screen and (min-width: 459px) and (max-width: 1499px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        justify-items: center;
+        align-items: center;
+    }
+    @media screen and (max-width: 460px) {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+    i {
+        margin-right: 5px;
+    }
+    h4 {
+        text-align: center;
+    }
+    img {
+        width: 20px;
+        margin-right: 5px;
+    }
+    .compe_scroll {
+        width: 100%;
+        height: 200px;
+        overflow-y: scroll;
+    }
+    .vm {
+        background-color: red;
+        color: white;
+        h4 {
+            background-color: rgba(255, 255, 255, 0.39);
+            border-bottom: solid white 2px;
+            border-top: solid white 2px;
+        }
+        ul {
+            list-style-type: " ";
+            list-style-type: none;
+            text-align: justify;
+            color: white;
+            font-weight: bold;
+            padding: 0;
+        }
+    }
+    .photo {
+        background-color: black;
+        color: white;
+        h4 {
+            background-color: rgba(255, 255, 255, 0.39);
+            border-bottom: solid white 2px;
+            border-top: solid white 2px;
+        }
+        ul {
+            list-style-type: none;
+            background: transparent;
+            text-align: justify;
+            color: white;
+            font-weight: bold;
+            padding: 0;
+        }
+    }
+    .cm {
+        background-color: $C2;
+        color: white;
+        h4 {
+            background-color: rgba(255, 255, 255, 0.39);
+            border-bottom: solid white 2px;
+            border-top: solid white 2px;
+        }
+        ul {
+            list-style-type: none;
+            background: transparent;
+            text-align: justify;
+            color: white;
+            font-weight: bold;
+            padding: 0;
+        }
+    }
+    .js {
+        background-color: yellow;
+        color: black;
+        h4 {
+            background-color: rgba(0, 0, 0, 0.39);
+            border-bottom: solid white 2px;
+            border-top: solid white 2px;
+        }
+        ul {
+            list-style-type: none;
+            background: transparent;
+            text-align: justify;
+            color: black;
+            font-weight: bold;
+        }
+    }
+}
+
+// Les différentes compétences END
+// Les hobbies
+.hobbies {
+    background-color: white;
+    .hob {
+        display: grid;
+        @media screen and (min-width: 1500px) {
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
+        @media screen and (min-width: 459px) and (max-width: 1499px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+        }
+        @media screen and (max-width: 460px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+        }
+        gap: 10px 20px;
+        padding: 10px 20px;
+        div {
+            padding: 10px 10px;
+            ul {
+                list-style-type: "- ";
+                background: transparent;
+                text-align: left;
+                color: white;
+                font-weight: bold;
+            }
+            h4 {
+                text-align: center;
+                text-decoration: underline;
+                font-weight: bold;
+            }
+            &:nth-child(1) {
+                background-color: red;
+                color: white;
+            }
+            &:nth-child(2) {
+                background-color: black;
+                color: white;
+            }
+            &:nth-child(3) {
+                background-color: $C2;
+                color: white;
+            }
+            &:nth-child(4) {
+                background-color: yellow;
+                ul {
                     color: black;
-                    .icon {
-                        position: absolute;
-                        left: 50%;
-                        bottom: -15px;
-                        color: yellow;
-                        -webkit-text-stroke-width: 1px;
-                        -webkit-text-stroke-color: rgba(0, 0, 0, .125);
-                    }
-                }
-            }
-            .competence {
-                .card {
-                    color: black;
-                    .card-title {
-                        text-align: center;
-                        .icon {
-                            position: absolute;
-                            right: 0;
-                            top: 0;
-                            -webkit-text-stroke-width: 1px;
-                            -webkit-text-stroke-color: black;
-                            .vm {
-                                color: red;
-                            }
-                            .photo {
-                                color: black;
-                            }
-                            .cm {
-                                color: $C2;
-                            }
-                            .js {
-                                color: yellow;
-                            }
-                        }
-                    }
-                    ul {
-                        list-style-type: none;
-                        background: transparent;
-                        text-align: left;
-                        li {
-                            .prog {
-                                width: 20px;
-                                margin-right: 5px;
-                            }
-                        }
-                    }
-                }
-            }
-            .formations,
-            .stage {
-                p {
-                    margin-left: 5px;
-                    b:first-child {
-                        color: $C2;
-                    }
-                    .icon {
-                        -webkit-text-stroke-width: 1px;
-                        -webkit-text-stroke-color: black;
-                        .vm {
-                            color: red;
-                        }
-                        .photo {
-                            color: black;
-                        }
-                        .cm {
-                            color: $C2;
-                        }
-                        .js {
-                            color: yellow;
-                        }
-                    }
-                }
-            }
-            .hobbies {
-                .hob {
-                    @media screen and (orientation: portrait) {
-                        display: grid;
-                        grid-template-columns: 1fr;
-                        grid-template-rows: 1fr 1fr;
-                        gap: 10px 20px;
-                        grid-template-areas: ". " ". ";
-                        padding: 10px 20px;
-                    }
-                    @media screen and (orientation:landscape) {
-                        display: grid;
-                        grid-template-columns: 1fr 1fr;
-                        grid-template-rows: 1fr 1fr;
-                        gap: 10px 20px;
-                        grid-template-areas: ". ." ". .";
-                        padding: 10px 20px;
-                    }
-                    display: grid;
-                    grid-template-columns: 1fr 1fr;
-                    grid-template-rows: 1fr 1fr;
-                    gap: 10px 20px;
-                    grid-template-areas: ". ." ". .";
-                    padding: 10px 20px;
-                    div {
-                        padding: 10px 10px;
-                        ul {
-                            list-style-type: "- ";
-                            background: transparent;
-                            text-align: left;
-                            color: white;
-                            font-weight: bold;
-                        }
-                        h4 {
-                            text-align: center;
-                            text-decoration: underline;
-                            font-weight: bold;
-                        }
-                        &:nth-child(1) {
-                            background-color: red;
-                            color: white;
-                        }
-                        &:nth-child(2) {
-                            background-color: $C2;
-                            color: white;
-                        }
-                        &:nth-child(3) {
-                            background-color: black;
-                            color: white;
-                        }
-                        &:nth-child(4) {
-                            background-color: yellow;
-                            ul {
-                                color: black;
-                            }
-                        }
-                    }
                 }
             }
         }
     }
+}
+
+// Les icones
+.icon {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    .vm {
+        color: red;
+    }
+    .photo {
+        color: black;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: white;
+    }
+    .cm {
+        color: $C2;
+    }
+    .js {
+        color: yellow;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #F0F0F0;
+    border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #B3AFB3;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 0px;
+    box-shadow: inset 0px 0px 0px 0px #F0F0F0;
+}
+
+h3 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    background-color: $C2;
+    color: white;
+    text-transform: uppercase;
+    height: 50px;
+    border: 5px solid transparent;
+    border-radius: 40px 0px 40px 0px;
+}
+
+h5 {
+    font-size: 1.7em;
+    font-weight: bold;
 }
