--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,7 @@ $C3: #00000C;
 $C3a: #00000c60;
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+@import url("https://fr.allfont.net/allfont.css?fonts=lexia");
 body {
     background-color: $C2;
 }
@@ -65,11 +66,11 @@ header {
     }
     @media screen and (max-width: 1280px) {
         a:not(.dropdown-item) {
-            font-size: 2.5vw;
+            font-size: 1.8vw;
             color: $C1;
         }
         .nav-item {
-            width: 100%;
+            width: auto;
             height: 30px;
         }
     }
@@ -353,6 +354,14 @@ main ul {
         text-align: center;
         color: $C1;
     }
+    a {
+        padding: 0.2rem 0.4rem;
+        font-size: 87.5%;
+        color: #fff;
+        background-color: #212529;
+        border-radius: 0.2rem;
+        white-space: nowrap;
+    }
     @media screen and (min-width: 1280px) {
         .parc {
             display: grid;
@@ -435,4 +444,9 @@ main ul {
 .copyright {
     text-align: center;
     color: white;
+}
+
+.dys {
+    font-family: 'Lexia', arial;
+    font-size: 14px;
 }
