Grande mise à jour de septembre
Maintenant, la navigation est beaucoup plus légère, on prend notre indépendance de Bootstrap aussi.

--- a/assets/css/cv_02.css
+++ b/assets/css/cv_02.css
@@ -12,6 +12,14 @@ footer {
   height: 100%;
 }
 
+footer:hover {
+  background: white;
+}
+
+footer:hover a {
+  color: black;
+}
+
 footer a {
   text-align: center;
   text-decoration: underline;
@@ -19,5 +27,6 @@ footer a {
   color: white;
   margin: auto auto;
   font-size: 10vw;
+  width: 100%;
 }
 /*# sourceMappingURL=cv_02.css.map */
