--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -1,15 +1,25 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Oswald");
+html {
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   background-color: white;
   color: black;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
 }
 
 main {
   display: block;
-}
-
-main .banniere {
-  padding-top: 50px;
 }
 
 @media screen and (min-width: 1500px) {
@@ -18,8 +28,6 @@ main .banniere {
     display: grid;
     -ms-grid-columns: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -38,8 +46,6 @@ main .banniere {
         grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -58,8 +64,6 @@ main .banniere {
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -71,7 +75,7 @@ main .banniere {
 }
 
 main section aside {
-  padding: auto auto;
+  padding: auto 0;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -101,11 +105,18 @@ main section:first-child .profil {
 
 main section:first-child .coordonnee {
   background-color: transparent;
+  text-align: center;
 }
 
 main section:first-child .coordonnee a {
   color: white;
   text-decoration: underline;
+  text-align: center;
+  position: relative;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
+  border-radius: 0.25rem;
 }
 
 main section:first-child .coordonnee a:hover {
@@ -113,6 +124,7 @@ main section:first-child .coordonnee a:hover {
 }
 
 main section:first-child .langues {
+  text-align: center;
   width: 100%;
   background-color: transparent;
 }
@@ -138,6 +150,7 @@ main section:last-child h3 {
   -webkit-box-shadow: 0 0 2rem 0 #2930421a;
           box-shadow: 0 0 2rem 0 #2930421a;
   background-color: #4c85bd;
+  font-family: Arial;
 }
 
 .metiers select {
@@ -145,10 +158,39 @@ main section:last-child h3 {
   color: white;
   font-size: 20px;
   text-align: center;
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+.metiers select:active {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
 }
 
 .metiers select option {
-  background-color: #00000c7c;
+  color: white;
+  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.metiers select option:hover {
+  background-color: grey;
+  color: black;
+}
+
+.metiers select .vm {
+  color: red;
+}
+
+.metiers select .photo {
+  color: black;
+}
+
+.metiers select .cm {
+  color: white;
+}
+
+.metiers select .js {
+  color: yellow;
 }
 
 @media (orientation: landscape) {
@@ -286,6 +328,7 @@ main section:last-child h3 {
 
 .hobbies .hob div {
   padding: 10px 10px;
+  border-radius: 5%;
 }
 
 .hobbies .hob div ul {
@@ -300,6 +343,18 @@ main section:last-child h3 {
   text-align: center;
   text-decoration: underline;
   font-weight: bold;
+}
+
+.hobbies .hob div h4:before {
+  content: "  ";
+  -webkit-text-decoration: dotted;
+          text-decoration: dotted;
+}
+
+.hobbies .hob div h4:after {
+  content: "  ";
+  -webkit-text-decoration: dotted;
+          text-decoration: dotted;
 }
 
 .hobbies .hob div:nth-child(1) {
