--- a/assets/css/cv_02.scss
+++ b/assets/css/cv_02.scss
@@ -13,6 +13,12 @@ footer {
     grid-template-areas: ". " ". ";
     width: 100%;
     height: 100%;
+    &:hover {
+        background: white;
+        a {
+            color: black;
+        }
+    }
     a {
         text-align: center;
         text-decoration: underline;
@@ -20,5 +26,6 @@ footer {
         color: white;
         margin: auto auto;
         font-size: 10vw;
+        width: 100%;
     }
 }
