--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,93 +18,7 @@ html {
     &:hover {
         color: yellow;
         text-decoration: none;
-        text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
-    }
-}
-
-// Le header
-header {
-    width: 100%;
-    background-color: $C3;
-    .cv {
-        text-align: center;
-        font-family: 'Oswald', sans-serif;
-        width: 10%;
-        background-color: white;
-        border: 1px solid #00000C;
-        padding-left: 1%;
-        padding-right: 1%;
-        border-radius: 0 180px 180px 0;
-        color: #4c85bd !important;
-        @media screen and (min-width: 990px) {
-            font-size: 2vw;
-        }
-        @media screen and (max-width: 990px) {
-            font-size: 5vw;
-        }
-        text-decoration: none;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transition: all 0.2s;
-        transition: all 0.2s;
-        &:hover {
-            color: #00000C;
-            border: 1px solid #4c85bd;
-            -webkit-box-shadow: inset 0 0 5px #4c85bd;
-            box-shadow: inset 0 0 5px #4c85bd;
-        }
-        &:active {
-            -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-        }
-    }
-    @media screen and (min-width: 1280px) {
-        a:not(.dropdown-item) {
-            font-size: 1.5vw;
-            color: $C1;
-        }
-    }
-    @media screen and (max-width: 1280px) {
-        a:not(.dropdown-item) {
-            font-size: 1.8vw;
-            color: $C1;
-        }
-        .nav-item {
-            width: auto;
-            height: 30px;
-        }
-    }
-    .dropdown {
-        &:hover {
-            opacity: 0.9;
-        }
-    }
-    .navbar-toggler {
-        background-color: $C2;
-        border-bottom: 1px $C2 solid;
-        &:active {
-            border-bottom: 5px $C2 solid;
-        }
-    }
-    .navbarDropdownMenuLink {
-        opacity: 0.5;
-        &:hover {
-            opacity: 0.9;
-        }
-    }
-    .dropdown-item {
-        opacity: 0.5;
-        z-index: 10000;
-        &:hover {
-            opacity: 0.9;
-            z-index: 10000;
-        }
-    }
-    .dropdown-menu {
-        z-index: 10000;
-        &:hover {
-            z-index: 10000;
-        }
+        text-shadow: 0px 0px 1px rgba(95, 81, 81, 0.616), 0px 0px 3px rgba(194, 4, 4, 0.616), 0px 0px 5px yellow !important;
     }
 }
 
@@ -277,36 +191,6 @@ header {
     }
 }
 
-// Les applications
-.apps {
-    .description {
-        border-top: $C3a solid 2px;
-        border-bottom: $C3a solid 2px;
-        box-shadow: $C3a 2px 2px 2px;
-        padding: 20px;
-        text-align: center;
-        color: $C1;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .appsview {
-        display: grid;
-        grid-gap: 20px;
-        grid-template-columns: auto auto;
-        margin: 10px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .appsview {
-        display: grid;
-        grid-gap: 10px;
-        grid-template-columns: auto;
-        margin: 10px;
-    }
-}
-
 // BG Anim
 
 /* Background data (Original source: https://subtlepatterns.com/grid-me/) */
@@ -361,27 +245,31 @@ main ul {
         background-color: #212529;
         border-radius: 0.2rem;
         white-space: nowrap;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
     @media screen and (min-width: 1280px) {
         .parc {
             display: grid;
             grid-gap: 20px;
             grid-template-columns: auto;
-            margin: 10px;
+            margin: 15px;
             article {
-                grid-template-columns: 12vw auto;
+                grid-template-columns: 20vw auto;
                 display: grid;
                 grid-gap: 20px;
                 div {
                     img {
-                        width: 12vw;
+                        width: 20vw;
                         margin: auto auto;
-                        height: 12vw;
+                        height: 20vw;
                         display: block;
                     }
-                    height: 10vw;
+                    height: 20vw;
                     &:nth-child(2n) {
-                        height: 12vw;
+                        height: 20vw;
                         font-size: 0.9vw;
                         background-color: #fff;
                         border: 1px solid rgba(0, 0, 0, .125);
@@ -394,8 +282,13 @@ main ul {
                         word-wrap: break-word;
                         background-clip: border-box;
                         border-radius: .25rem;
+                        p {
+                            padding-left: 10px;
+                            line-height: 150%;
+                        }
                         h3 {
                             font-family: 'Open Sans', sans-serif;
+                            padding-left: 5px;
                         }
                     }
                 }
@@ -430,9 +323,14 @@ main ul {
                         background-clip: border-box;
                         border-bottom-right-radius: .25em;
                         border-bottom-left-radius: .25em;
+                        p {
+                            padding-left: 10px;
+                            line-height: 150%;
+                        }
                         h3 {
                             font-family: 'Open Sans', sans-serif;
                             font-size: 1.2em;
+                            padding-left: 5px;
                         }
                     }
                 }
@@ -455,5 +353,5 @@ main ul {
 
 .dys {
     font-family: 'Lexia', arial;
-    font-size: 14px;
+    font-size: 16px;
 }
