--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,7 @@ html {
     padding-left: 5px;
     padding-right: 5px;
     background-color: #00000c60;
+    line-height: 150%;
   }
   main .inline .technologies span,
   main .inline .logiciels span,
