--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -158,6 +158,7 @@ html {
                 padding-left: 5px;
                 padding-right: 5px;
                 background-color: $C3a;
+                line-height: 150%;
                 span {
                     display: block;
                     border-bottom: 2px $C1 solid;
